[package]
name = "vvvvvv_pieces"
version = "0.1.0"
authors = ["Jason Orendorff <jason.orendorff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
lodepng="2.0"
libc="0.2"

[build-dependencies]
cbindgen="0.12"
